@@ -79,6 +79,7 @@ BEGIN
         MENUITEM "Enable Run in Background",    MENU_RUN_IN_BACKGROUND
         MENUITEM "Enable Background Input",     MENU_BACKGROUND_INPUT
         MENUITEM "Enable Auto-save",            MENU_ENABLE_AUTOSAVE
+        MENUITEM "Frame Adv. - Skip Lag",       MENU_DISPLAY_FA_LAGSKIP
         POPUP "Display"
         BEGIN
             MENUITEM "Movie Status Icon",           MENU_SHOW_STATUS_ICON
