@@ -236,6 +236,7 @@ enum EMUCMD
 	EMUCMD_TOOL_OPENPPU,
 	EMUCMD_TOOL_OPENTRACELOGGER,
 	EMUCMD_TOOL_OPENCDLOGGER,
+	EMUCMD_FRAMEADV_SKIPLAG,
 
 	EMUCMD_MAX
 };
